--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "outDir": "../../dist",
     "target": "es6",
-    "declaration": true
+    "declaration": true,
+    "skipLibCheck": true
   },
   "compileOnSave": true,
   "include": ["**/*"],
